[POC] Service accounts with API Key auth